set(LHMP_CORE_FILES
    AntiCheat.cpp
    AntiCheat.h
    CChat.cpp
    CChat.h
    CColoredText.cpp
    CColoredText.h
    CCore.cpp
    CCore.h
    CCrashHandler.cpp
    CCrashHandler.h
    CDirect3D8Proxy.h
    CDirect3DDevice8Proxy.h
    CDirectInput8DeviceProxy.h
    CDirectInput8Proxy.h
    CEngineStack.cpp
    CEngineStack.h
    CEntity.cpp
    CEntity.h
    CFileSystem.h
    CFileTransfer.cpp
    CFileTransfer.h
    CFont.cpp
    CFont.h
    CGame.cpp
    CGame.h
    CGameSync.cpp
    CGameSync.h
    CGraphics.cpp
    CGraphics.h
    CHooks.cpp
    CHooks.h
    CIngameMenu.cpp
    CIngameMenu.h
    CInterpolation.cpp
    CInterpolation.h
    CKeyboard.cpp
    CKeyboard.h
    CLocalPlayer.cpp
    CLocalPlayer.h
    CLog.cpp
    CLog.h
    CNametags.cpp
    CNametags.h
    CNetwork.cpp
    CNetwork.h
    CPed.cpp
    CPed.h
    CPedPool.cpp
    CPedPool.h
    CPickup.cpp
    CPickup.h
    CPickupPool.cpp
    CPickupPool.h
    CPlayerSync.cpp
    CPlayerSync.h
    CScripts.h
    CSQFonts.cpp
    CSQFonts.h
    CSQImages.cpp
    CSQImages.h
    CSquirrel.cpp
    CSquirrel.h
    CVehicle.cpp
    CVehicle.h
    CVehiclePool.cpp
    CVehiclePool.h
    directx8hook.h
    main.cpp
    main.h
    networkdef.h
    raknetdef.h
    structs.h
)   
add_library(lhmp MODULE ${LHMP_CORE_FILES})
set_target_properties(lhmp PROPERTIES COMPILE_FLAGS "-m32 -D_CRT_SECURE_NO_WARNINGS" LINK_FLAGS
    "/SAFESEH:NO /NODEFAULTLIB:libci.lib")

target_link_libraries(lhmp RakNet squirrel sqlite udplib sqstdlib md5 detours
    ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS} d3dfont d3dsdk)
