#add_subdirectory(cd3dfont)
#add_subdirectory(detours)
#add_subdirectory(DirectX9SDK2007)
#add_subdirectory(dx8sdk)
#add_subdirectory(INIParser)
#add_subdirectory(janssJSON)
add_subdirectory(md5)
add_subdirectory(RakNet)
add_subdirectory(sqlite)
add_subdirectory(squirrel)
add_subdirectory(UDPWrapper)
