cmake_minimum_required(VERSION 3.0)

project(raknet)

set(RAKNET_SOURCE_LIST
	Base64Encoder.cpp
	BitStream.cpp
	CCRakNetSlidingWindow.cpp
	CCRakNetUDT.cpp
	CheckSum.cpp
	CloudClient.cpp
	CloudCommon.cpp
	CloudServer.cpp
	CommandParserInterface.cpp
	ConnectionGraph2.cpp
	ConsoleServer.cpp
	DataCompressor.cpp
	DirectoryDeltaTransfer.cpp
	DR_SHA1.cpp
	DS_BytePool.cpp
	DS_ByteQueue.cpp
	DS_HuffmanEncodingTree.cpp
	DS_Table.cpp
	DynDNS.cpp
	EmailSender.cpp
	EpochTimeToString.cpp
	FileList.cpp
	FileListTransfer.cpp
	FileOperations.cpp
	FormatString.cpp
	FullyConnectedMesh2.cpp
	Getche.cpp
	Gets.cpp
	GetTime.cpp
	gettimeofday.cpp
	GridSectorizer.cpp
	HTTPConnection.cpp
	HTTPConnection2.cpp
	IncrementalReadInterface.cpp
	Itoa.cpp
	LinuxStrings.cpp
	LocklessTypes.cpp
	LogCommandParser.cpp
	MessageFilter.cpp
	NatPunchthroughClient.cpp
	NatPunchthroughServer.cpp
	NatTypeDetectionClient.cpp
	NatTypeDetectionCommon.cpp
	NatTypeDetectionServer.cpp
	NetworkIDManager.cpp
	NetworkIDObject.cpp
	PacketConsoleLogger.cpp
	PacketFileLogger.cpp
	PacketizedTCP.cpp
	PacketLogger.cpp
	PacketOutputWindowLogger.cpp
	PluginInterface2.cpp
	PS4Includes.cpp
	Rackspace.cpp
	RakMemoryOverride.cpp
	RakNetCommandParser.cpp
	RakNetSocket.cpp
	RakNetSocket2.cpp
	RakNetSocket2_360_720.cpp
	RakNetSocket2_Berkley.cpp
	RakNetSocket2_Berkley_NativeClient.cpp
	RakNetSocket2_NativeClient.cpp
	RakNetSocket2_PS3_PS4.cpp
	RakNetSocket2_PS4.cpp
	RakNetSocket2_Vita.cpp
	RakNetSocket2_WindowsStore8.cpp
	RakNetSocket2_Windows_Linux.cpp
	RakNetSocket2_Windows_Linux_360.cpp
	RakNetStatistics.cpp
	RakNetTransport2.cpp
	RakNetTypes.cpp
	RakPeer.cpp
	RakSleep.cpp
	RakString.cpp
	RakThread.cpp
	RakWString.cpp
	Rand.cpp
	RandSync.cpp
	ReadyEvent.cpp
	RelayPlugin.cpp
	ReliabilityLayer.cpp
	ReplicaManager3.cpp
	Router2.cpp
	RPC4Plugin.cpp
	SecureHandshake.cpp
	SendToThread.cpp
	SignaledEvent.cpp
	SimpleMutex.cpp
	SocketLayer.cpp
	StatisticsHistory.cpp
	StringCompressor.cpp
	StringTable.cpp
	SuperFastHash.cpp
	TableSerializer.cpp
	TCPInterface.cpp
	TeamBalancer.cpp
	TeamManager.cpp
	TelnetTransport.cpp
	ThreadsafePacketLogger.cpp
	TwoWayAuthentication.cpp
	UDPForwarder.cpp
	UDPProxyClient.cpp
	UDPProxyCoordinator.cpp
	UDPProxyServer.cpp
	VariableDeltaSerializer.cpp
	VariableListDeltaTracker.cpp
	VariadicSQLParser.cpp
	VitaIncludes.cpp
	WSAStartupSingleton.cpp
	_FindFirst.cpp
	)

add_library(raknet ${RAKNET_SOURCE_LIST})
target_include_directories(raknet PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})


